added about me-changed home page

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,29 @@
   <!-- whole page -->
 .
 
-         <a href="./2d_artwork.html">
+  <div class="pre-bday-outer">
+    <div class="pre-bday-inner">
+      <p class="top_title">Full time student- BA Art & Digital Art & Web Development<div class="pre-bday-row">
+        <div>
+          <img src="./img/smallcroppedprofilepic.jpg" alt="digital self portrait" width="500" height="550"> 
+        </div>
+        <div class="pre-bday-intro">
+          <h1 class="pre-bday-title"><strong>Dolly Halo</strong></h1>
+          <p class="h3 pre-bday-meta"><b>Hey There!</b></p>
+          <p class="intro-para"><em>With a knack for seeing things from a different perspective, I love creating art using a variety of different mediums.</em></div>
+      </div>
+
+      <div class="pre-bday-row">
+        <div>
+          <p>Experience <b>sculpting</b> with clay, wire, metal, cardboard, and tissue paper.</p>
+          <p><b>Painting</b> with acrylics, gouache, indian ink, and spray paint</p>
+
+        </div>
+        <div class="pre-bday-intro">
+          <p><b>Drawing</b> using pencil, colored pencil, micron pens, charcoal, and pastels.</p>
+          <p><b>Digital art</b> using Adobe Illustrator and Photoshop.</p>
+          <p><b>Miscellaneous</b> art including but not limited to, photography, collage, scrapbooking, sewing, and embroidery.  </p>
+          <a href="./2d_artwork.html">
             <img src="./img/2dboardgame_thumbnail.jpg" alt="2dart_thumbnail">
           </a>
 
@@ -57,6 +79,11 @@
             <img src="./img/giz2.jpg" alt="giztestlink">
           </a>
 
+          
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
