added image with page

--- a/2d_artwork.html
+++ b/2d_artwork.html
@@ -25,10 +25,28 @@
 <body>
   <!-- Place your site's HTML here -->
   <!-- whole page -->
-  <div class="pre-bday-outer">
-    <div>
-      <img src="./img/2Dboard_game_resized.jpg" alt="boardgame_thumb"> 
+  <div class="salvador-dali-pic1">
+      <img src="./img/2Dsalvador-dali-board-game (1).jpg" alt="boardgame_thumb"> 
     </div>
+  
+    <div class="salvador-dali-pic2">
+      <img src="./img/2Dsalvador-dali-board-game (2).jpg" alt="boardgame_thumb2"> 
     </div>
+
+    <div class="salvador-dali-pic3">
+      <img src="./img/2Dsalvador-dali-board-game (3).jpg" alt="boardgame_thumb3"> 
+    </div>
+
+    <div class="salvador-dali-pic4">
+      <img src="./img/2Dsalvador-dali-board-game (4).jpg" alt="boardgame_thumb4"> 
+    </div>
+
+    <div class="salvador-dali-pic5">
+      <img src="./img/2Dsalvador-dali-board-game (5).jpg" alt="boardgame_thumb5"> 
+    </div>
+
+
+
+
 </body>
 </html>
