--- a/3d_artwork.html
+++ b/3d_artwork.html
@@ -27,6 +27,10 @@
   <!-- whole page -->
 
 
+  <div class="digital-portrait">
+    <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
+  </div>
+
 
 </body>
 </html>
