added nav bar to pages and links to nav pages

--- a/3d_artwork.html
+++ b/3d_artwork.html
@@ -27,6 +27,16 @@
   <!-- whole page -->
 
 
+  <nav class="navbar">
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="aboutme.html">About</a></li>
+    <li><a href="mywork.html">My Work</a></li>
+    <li><a href="#">Contact</a></li>
+    </ul>
+    </nav>
+
+
   <div class="digital-portrait">
     <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
   </div>
