--- a/aboutme.html
+++ b/aboutme.html
@@ -27,6 +27,14 @@
   <!-- Place your site's HTML here -->
   <!-- whole page -->
 .
+<nav class="navbar">
+  <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="aboutme.html">About</a></li>
+  <li><a href="mywork.html">My Work</a></li>
+  <li><a href="#">Contact</a></li>
+  </ul>
+  </nav>
 
   <div class="pre-bday-outer">
     <div class="pre-bday-inner">
