--- a/mywork.html
+++ b/mywork.html
@@ -2,8 +2,9 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>typog_artwork</title>
-    <meta name="description" content="typog_artwork">
+    <title>portfolio_site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="portfolio_site">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
     <meta property="og:type" content="">
@@ -26,6 +27,12 @@
   <!-- Place your site's HTML here -->
   <!-- whole page -->
 
+
+
+
+    
+
+
   <nav class="navbar">
     <ul>
     <li><a href="index.html">Home</a></li>
@@ -35,7 +42,11 @@
     </ul>
     </nav>
 
-        <img src="./img/event_poster_large (1).jpg" alt="typog_event_poster">
+
+
+
+
+
 
 </body>
 </html>
