--- a/rottingfruit.html
+++ b/rottingfruit.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>typog_artwork</title>
-    <meta name="description" content="typog_artwork">
+    <title>3d_artwork</title>
+    <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
     <meta property="og:type" content="">
@@ -35,7 +35,11 @@
     </ul>
     </nav>
 
-        <img src="./img/event_poster_large (1).jpg" alt="typog_event_poster">
+
+  <div class="digital-portrait">
+    <img src="./img/bananas.jpg" alt="rotting-fruit-painting"> 
+  </div>
+
 
 </body>
 </html>
