--- a/2d_artwork.html
+++ b/2d_artwork.html
@@ -25,6 +25,18 @@
 <body>
   <!-- Place your site's HTML here -->
   <!-- whole page -->
+
+
+  <nav class="navbar">
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="aboutme.html">About</a></li>
+    <li><a href="mywork.html">My Work</a></li>
+    <li><a href="#">Contact</a></li>
+    </ul>
+    </nav>
+
+    
   <div class="salvador-dali-pic1">
       <img src="./img/2Dsalvador-dali-board-game (1).jpg" alt="boardgame_thumb"> 
     </div>
