--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 <body>
   <!-- Place your site's HTML here -->
   <!-- whole page -->
+
+
+
+
+    
 .
 
   <div class="pre-bday-outer">
@@ -34,8 +39,18 @@
       </div>
        
         <div class="pre-bday-intro">
-          <h1 class="pre-bday-title"><strong>Dolly Halo</strong></h1>
+          <h1><strong>Dolly Halo</strong></h1>
           </div>
+
+
+          <nav class="navbar">
+            <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutme.html">About</a></li>
+            <li><a href="mywork.html">My Work</a></li>
+            <li><a href="#">Contact</a></li>
+            </ul>
+            </nav>
 
 <a href="./2d_artwork.html">
             <img src="./img/2dboardgame_thumbnail.jpg" alt="2dart_thumbnail">
@@ -51,7 +66,7 @@
           </a>
 
           <div class="rotting-fruit-thumb">
-          <a href="./testpage.html">
+          <a href="./rottingfruit.html">
             <img src="./img/2DRotting_fruit_portfolio.jpg" alt="rotting fruit thumbnail">
           </a>
         </div>
