fixed contact link in nav bars

--- a/2d_artwork.html
+++ b/2d_artwork.html
@@ -32,11 +32,11 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutme.html">About</a></li>
     <li><a href="mywork.html">My Work</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="contact.html">Contact</a></li>
     </ul>
     </nav>
 
-    
+
   <div class="salvador-dali-pic1">
       <img src="./img/2Dsalvador-dali-board-game (1).jpg" alt="boardgame_thumb"> 
     </div>
