--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@
   <li><a href="index.html">Home</a></li>
   <li><a href="aboutme.html">About</a></li>
   <li><a href="mywork.html">My Work</a></li>
-  <li><a href="#">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
   </ul>
   </nav>
 
