--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>3d_artwork</title>
+    <title>contact page</title>
     <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
@@ -37,9 +37,7 @@
     </nav>
 
 
-  <div class="digital-portrait">
-    <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
-  </div>
+Yo! this is the contact page!!
 
 
 </body>
