--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>portfolio_site</title>
+    <title>about me page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="portfolio_site">
     <meta name="viewport" content="width=device-width, initial-scale=1">
