--- a/mywork.html
+++ b/mywork.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>portfolio_site</title>
+    <title>my work page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="portfolio_site">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,6 +41,29 @@
     <li><a href="contact.html">Contact</a></li>
     </ul>
     </nav>
+
+
+
+    <ul class="'portfolio-grid">
+        <li>
+            <img src="./img/2Dboard_game_resized.jpg">
+        </li>
+
+        <li>
+            <img src="./img/2Dboard_game_resized.jpg"/>
+        </li>
+
+        <li>
+            <img src="./img/2Dboard_game_resized.jpg">
+        </li>
+
+        <li>
+            <img src="./img/2Dboard_game_resized.jpg">
+        </li>
+
+    
+    </ul>
+</section>
 
 
 
