added page for nature 9 times and image to page

--- a/rottingfruit.html
+++ b/rottingfruit.html
@@ -35,7 +35,13 @@
     </ul>
     </nav>
 
+    Rotting Fruit
 
+    I cut and arranged a banana and then observed it over the course of several days, documenting the stages of decay. 
+    
+    I painted the stages of rotting fruit by using gouache on bristol paper.
+
+    
   <div class="digital-portrait">
     <img src="./img/bananas.jpg" alt="rotting-fruit-painting"> 
   </div>
