--- a/nature9times.html
+++ b/nature9times.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>2d_artwork</title>
-    <meta name="description" content="2d_artwork">
+    <title>nature-9-times</title>
+    <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
     <meta property="og:type" content="">
@@ -26,7 +26,6 @@
   <!-- Place your site's HTML here -->
   <!-- whole page -->
 
-
   <nav class="navbar">
     <ul>
     <li><a href="index.html">Home</a></li>
@@ -36,37 +35,16 @@
     </ul>
     </nav>
 
+    "Nature 9 Times"
 
+    Nature designed in 9 different ways,
+    
+    displaying versatility using 3 different mediums. Micron pen, Indian Ink, and gouache paint on bristol paper.
 
-    Salvador Dali Inspired Board Game
-
-This was a project where I was tasked with creating a board game with artwork inspired by a famous artist. The mediums that were used to create this work include gouache, Indian ink, Micron pens, the game pieces out of clay, done on bristol paper mounted on cardboard.
-
-The piece is carefully arranged, cut and glued so the board folds up nicely.
-
-
-
-  <div class="salvador-dali-pic1">
-      <img src="./img/2Dsalvador-dali-board-game (1).jpg" alt="boardgame_thumb"> 
-    </div>
-  
-    <div class="salvador-dali-pic2">
-      <img src="./img/2Dsalvador-dali-board-game (2).jpg" alt="boardgame_thumb2"> 
-    </div>
-
-    <div class="salvador-dali-pic3">
-      <img src="./img/2Dsalvador-dali-board-game (3).jpg" alt="boardgame_thumb3"> 
-    </div>
-
-    <div class="salvador-dali-pic4">
-      <img src="./img/2Dsalvador-dali-board-game (4).jpg" alt="boardgame_thumb4"> 
-    </div>
-
-    <div class="salvador-dali-pic5">
-      <img src="./img/2Dsalvador-dali-board-game (5).jpg" alt="boardgame_thumb5"> 
-    </div>
-
-
+    
+  <div class="digital-portrait">
+    <img src="./img/2DNature_9_times_portfolio.jpg" alt="rotting-fruit-painting"> 
+  </div>
 
 
 </body>
