added equipx imgs

--- a/mywork.html
+++ b/mywork.html
@@ -43,7 +43,7 @@
       <img src="./img/2dboardgame_thumbnail.jpg" alt="2dart_thumbnail">
     </a>
   
-    <a href="./3d_artwork.html">
+    <a href="./digital_artwork.html">
       <img src="./img/digitalart_thumbnail.jpg" alt="digitalart_thumbnail">
     </a>
   
@@ -63,13 +63,24 @@
       </a>
     </div>
   
-    <a href="./testpage.html">
-      <img src="./img/giz2.jpg" alt="giztestlink">
+    <a href="./wearableart.html">
+      <img src="./img/cropped_wearable_art.jpg" alt="giztestlink">
     </a>
   
     <a href="./testpage.html">
       <img src="./img/giz2.jpg" alt="giztestlink">
     </a>
+
+
+
+
+
+
+
+
+
+
+
   </section>
   
 
