--- a/wearableart.html
+++ b/wearableart.html
@@ -38,7 +38,7 @@
 
 
   <div class="digital-portrait">
-    <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
+    <img src="./img/cropped_wearable_art.jpg" alt="digital portrait"> 
   </div>
 
 
