added pages for equipx and music book

--- a/3d_artwork.html
+++ b/3d_artwork.html
@@ -37,8 +37,8 @@
     </nav>
 
 
-  <div class="digital-portrait">
-    <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
+  <div class="wire sculpture">
+    <img src="./img/Painted wire sculpture portfolio.jpg" alt="digital portrait"> 
   </div>
 
 
