--- a/musicbook.html
+++ b/musicbook.html
@@ -2,9 +2,8 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>portfolio_site-home page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="portfolio_site">
+    <title>music book</title>
+    <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
     <meta property="og:type" content="">
@@ -27,6 +26,7 @@
   <!-- Place your site's HTML here -->
   <!-- whole page -->
 
+
   <nav class="navbar">
     <ul>
     <li><a href="index.html">Home</a></li>
@@ -37,66 +37,9 @@
     </nav>
 
 
-    
-  <section class="portfolio-grid">
-    <a href="./2d_artwork.html">
-      <img src="./img/2dboardgame_thumbnail.jpg" alt="2dart_thumbnail">
-    </a>
-  
-    <a href="./digital_artwork.html">
-      <img src="./img/digitalart_thumbnail.jpg" alt="digitalart_thumbnail">
-    </a>
-  
-    <a href="./typog_artwork.html">
-      <img src="./img/event_poster_thumbnail.jpg" alt="typog_thumbnail">
-    </a>
-  
-    <div class="rotting-fruit-thumb">
-      <a href="./rottingfruit.html">
-        <img src="./img/2DRotting_fruit_portfolio.jpg" alt="rotting fruit thumbnail">
-      </a>
-    </div>
-  
-    <div class="nature-nine-times">
-      <a href="./nature9times.html">
-        <img src="./img/2DNature_9_times_portfolio.jpg" alt="nature thumbnail">
-      </a>
-    </div>
-  
-    <a href="./wearableart.html">
-      <img src="./img/cropped_wearable_art.jpg" alt="giztestlink">
-    </a>
-  
-    <a href="./equipxapp.html">
-      <img src="./img/HollySloat_EquipX Visual Comps-jpeg.jpg" alt="giztestlink">
-    </a>
-
-    <a href="./3d_artwork.html">
-        <img src="./img/Painted wire sculpture portfolio.jpg" alt="typog_thumbnail">
-      </a>
-
-      <a href="./typog_artwork.html">
-        <img src="./img/music-book (5).jpg" alt="typog_thumbnail">
-      </a>
-
-
-      <a href="./typog_artwork.html">
-        <img src="./img/event_poster_thumbnail.jpg" alt="typog_thumbnail">
-      </a>
-
-
-
-
-
-
-
-
-
-  </section>
-  
-
-
-
+  <div class="music-book">
+    <img src="./img/music-book (3).jpg" alt="digital portrait"> 
+  </div>
 
 
 </body>
