added general text to pages

--- a/3d_artwork.html
+++ b/3d_artwork.html
@@ -37,6 +37,14 @@
     </nav>
 
 
+    Wire Sculpture
+
+One of my first challenges in 3D art was to create an object out of wire. I chose to create a wheelchair because it was very personal to me. The wheelchair represents mobility, independence, strength, and freedom. 
+
+I felt like the wire was a perfect medium for this subject matter because of the industrial nature of the two. 
+
+The wire emphasizes the structure and the stability of the wheelchair
+
   <div class="wire sculpture">
     <img src="./img/Painted wire sculpture portfolio.jpg" alt="digital portrait"> 
   </div>
