--- a/aboutme.html
+++ b/aboutme.html
@@ -58,40 +58,24 @@
           <p><b>Drawing</b> using pencil, colored pencil, micron pens, charcoal, and pastels.</p>
           <p><b>Digital art</b> using Adobe Illustrator and Photoshop.</p>
           <p><b>Miscellaneous</b> art including but not limited to, photography, collage, scrapbooking, sewing, and embroidery.  </p>
-          <a href="./2d_artwork.html">
-            <img src="./img/2dboardgame_thumbnail.jpg" alt="2dart_thumbnail">
-          </a>
-
-          <a href="./3d_artwork.html">
-            <img src="./img/digitalart_thumbnail.jpg" alt="digitalart_thumbnail">
-          </a>
-
-
-          <a href="./typog_artwork.html">
-            <img src="./img/event_poster_thumbnail.jpg" alt="typog_thumbnail">
-          </a>
-
-          <a href="./testpage.html">
-            <img src="./img/giz2.jpg" alt="giztestlink">
-          </a>
-          
-          <a href="./testpage.html">
-            <img src="./img/giz2.jpg" alt="giztestlink">
-          </a>
-
-          <a href="./testpage.html">
-            <img src="./img/giz2.jpg" alt="giztestlink">
-          </a>
-
-          <a href="./testpage.html">
-            <img src="./img/giz2.jpg" alt="giztestlink">
-          </a>
-
-          
         </div>
-      </div>
-    </div>
-  </div>
+
+<br><br>
+       <div class="about-name-from"> <p> My name is Holly Sloat, but everyone calls me Dolly Halo.
+
+I was born in a small town in right outside of Chicago, we call Hammond, Indiana. Where I’m from, we refer to the nearby areas as “Chicago-Land” because everything is so close and connected. I moved to southern Louisiana in 2014 and have called this my home ever since. 
+</p>
+</div>
+
+<div class="disability-intro"><p>I am a Spinal Cord Injury Survivor.
+
+  In April 2019, I was in a near fatal car accident where I suffered many injuries including breaks in my neck and my spine, causing permanent paraplegia. I now use a wheelchair to get around, which is another separate challenge all on it’s own- Learning to adapt to a whole new way of doing things and living life again.
+  
+  I view this as one of my strengths, because it has given me a whole new, and wider perspective on the meaning of life, the outlook on the way things are, and the challenges that others face that we don’t even think about.
+  
+  This is what makes me a strong advocate for ADA accessibility and inclusivity. As an artist, my perspective expands my horizon. As a person, with my advocacy, my art, and my work, I hope to inspire change.</p></div>
+
+
 
 
 
