--- a/digitalartpattern.html
+++ b/digitalartpattern.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>3d_artwork</title>
+    <title>digital-art-pattern-design</title>
     <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
@@ -36,13 +36,15 @@
     </ul>
     </nav>
 
-    Digital Self Portrait 
 
-    Digital self portrait referenced from an original photo, created using Adobe Illustrator.
+    Pattern
 
-    
-  <div class="digital-portrait">
-    <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
+Experimenting creating pattern with adobe illustrator. 
+
+The pattern styles that you see here include: Musical pattern, mosaic pattern, food pattern, abstract pattern, geometric pattern, and floral pattern.
+
+  <div class="digital-art-pattern-design">
+    <img src="./img/digital-art-pattern-design (3).jpg" alt="digital-art-pattern-design"> 
   </div>
 
 
