--- a/mottomerch.html
+++ b/mottomerch.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>3d_artwork</title>
+    <title>MottoMerch</title>
     <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
@@ -36,13 +36,13 @@
     </ul>
     </nav>
 
-    Digital Self Portrait 
 
-    Digital self portrait referenced from an original photo, created using Adobe Illustrator.
+    Motto Merch
 
-    
-  <div class="digital-portrait">
-    <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
+    Focusing on using only typography, I designed a motto meant for print. I chose the saying, "Life Rolls On" because it emphasizes the message I try to inspire.
+
+  <div class="MottoMerch">
+    <img src="./img/MottoMerch-product-pitch (1).jpg" alt="MottoMerch"> 
   </div>
 
 
