--- a/typog_artwork.html
+++ b/typog_artwork.html
@@ -35,6 +35,13 @@
     </ul>
     </nav>
 
+
+    Event Poster
+
+Displayed here is an event poster I created for a make-believe Horror Film Festival.
+
+Demonstrating how typography can be manipulated to create engaging advertisement and call to action.
+
         <img src="./img/event_poster_large (1).jpg" alt="typog_event_poster">
 
 </body>
