--- a/mywork.html
+++ b/mywork.html
@@ -85,6 +85,15 @@
       </a>
 
 
+      <a href="./digitalartpattern.html">
+        <img src="./img/digital-art-pattern-design (1).jpg" alt="digital-art-pattern-design">
+      </a>
+
+
+      <a href="./mottomerch.html">
+        <img src="./img/MottoMerch-product-pitch (1).jpg" alt="abstract-scupture">
+      </a>
+
 
 
 
