changed names of img files

--- a/mywork.html
+++ b/mywork.html
@@ -86,7 +86,7 @@
 
 
       <a href="./digitalartpattern.html">
-        <img src="./img/digital-art-pattern-design (1).jpg" alt="digital-art-pattern-design">
+        <img src="./img/digital pattern pizza.jpg" alt="digital-art-pattern-design">
       </a>
 
 
