fixed broken img link

--- a/digitalartpattern.html
+++ b/digitalartpattern.html
@@ -44,7 +44,7 @@ Experimenting creating pattern with adobe illustrator.
 The pattern styles that you see here include: Musical pattern, mosaic pattern, food pattern, abstract pattern, geometric pattern, and floral pattern.
 
   <div class="digital-art-pattern-design">
-    <img src="./img/digital-art-pattern-design (3).jpg" alt="digital-art-pattern-design"> 
+    <img src="./img/digital pattern pizza.jpg" alt="digital-art-pattern-design"> 
   </div>
 
 
