update img files and about me text

--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
 <body>
   <!-- Place your site's HTML here -->
   <!-- whole page -->
-.
+
 <nav class="navbar">
   <ul>
   <li><a href="index.html">Home</a></li>
@@ -63,13 +63,13 @@
 
        <div class="about-name-from"> <p> My name is Holly Sloat, but everyone calls me Dolly Halo.
 
-I was born in a small town in right outside of Chicago, we call Hammond, Indiana. Where I’m from, we refer to the nearby areas as “Chicago-Land” because everything is so close and connected. I moved to southern Louisiana in 2014 and have called this my home ever since. 
+I'm from a town right outside Chicago, called Hammond, Indiana. In 2014, I moved to southern Louisiana and have been here ever since.
 </p>
 </div>
 
 <div class="disability-intro"><p>I am a Spinal Cord Injury Survivor.
 
-  In April 2019, I was in a near fatal car accident where I suffered many injuries including breaks in my neck and my spine, causing permanent paraplegia. I now use a wheelchair to get around, which is another separate challenge all on it’s own- Learning to adapt to a whole new way of doing things and living life again.
+  In April 2019, I was in a bad car accident where I suffered many injuries including breaks in my neck and my spine, causing permanent paraplegia. I now use a wheelchair to get around, which is another separate challenge all on it’s own- Learning to adapt to a whole new way of doing things and living life again.
   
   I view this as one of my strengths, because it has given me a whole new, and wider perspective on the meaning of life, the outlook on the way things are, and the challenges that others face that we don’t even think about.
   
