--- a/mywork.html
+++ b/mywork.html
@@ -90,7 +90,7 @@
       </a>
 
 
-      <a href="./mottomerch.html">
+      <a href="./img/merch-motto-pitch-web-jpeg.jpg">
         <img src="./img/MottoMerch-product-pitch (1).jpg" alt="abstract-scupture">
       </a>
 
