update contact page

--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,22 @@
     </ul>
     </nav>
 
+<h1>Contact</h1>
 
-Yo! this is the contact page!!
+<div class="contact-project"><p>Want to start a new project?</p>
+</div>
+
+<div class="contact-say-hello"><p>Or just say Hello?</p></div>
+
+<div class="email-link"><a href="mailto:hsloat1@lsu.edu">Hsloat1@lsu.edu</a>
+</div>
+
+<div class="pink-insta-icon">
+  <img src="./img/insta-pink-icon-png.png" alt="instagram-icon"> 
+</div>
+https://www.instagram.com/dollyhaloart/
+
+
 
 
 </body>
