update inst ICON

--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,17 @@
 </div>
 
 <div class="pink-insta-icon">
-  <img src="./img/insta-pink-icon-png.png" alt="instagram-icon"> 
+  <img src="./img/pink-circle-insta-icon.png" alt="instagram-icon"> 
 </div>
+
+DollyHaloArt
 https://www.instagram.com/dollyhaloart/
+
+<a href="https://www.instagram.com/dollyhaloart/" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; text-decoration: none; color: white; background-color: #E1306C; padding: 10px 15px; border-radius: 5px;">
+  <img src="./img/pink-circle-insta-icon.png" alt="Instagram Icon" style="width: 20px; height: 20px; margin-right: 10px;">
+  DollyHaloArt
+</a>
+
 
 
 
