working on carausel

--- a/equipxapp.html
+++ b/equipxapp.html
@@ -37,8 +37,8 @@
     </nav>
 
 
-  <div class="digital-portrait">
-    <img src="./img/HollySloat_EquipX Visual Comps-jpeg.jpg" alt="digital portrait"> 
+  <div class="equipx">
+    <img src="./img/HollySloat_EquipX Visual Comps-jpeg.jpg" alt="equipx components image"> 
   </div>
 
 
