--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
 
   <div class="pre-bday-outer">
     <div class="pre-bday-inner">
-      <p class="top_title">Full time student- BA Art & Digital Art & Web Development<div class="pre-bday-row">
+      <p class="top_title">.<div class="pre-bday-row">
         <div>
           <img src="./img/smallcroppedprofilepic.jpg" alt="digital self portrait" width="500" height="550"> 
         </div>
@@ -47,6 +47,9 @@
           <p class="h3 pre-bday-meta"><b>Hey There!</b></p>
           <p class="intro-para"><em>With a knack for seeing things from a different perspective, I love creating art using a variety of different mediums.</em></div>
       </div>
+
+      <div class="my-name-is"> <p> My name is Holly Sloat, but everyone calls me Dolly Halo.</p>
+    </div>
 
       <div class="pre-bday-row">
         <div>
@@ -61,17 +64,21 @@
         </div>
 
 
-       <div class="about-name-from"> <p> My name is Holly Sloat, but everyone calls me Dolly Halo.
 
-I'm from a town right outside Chicago, called Hammond, Indiana. In 2014, I moved to southern Louisiana and have been here ever since.
-</p>
-</div>
+
+       <div class="full-time-student"> <p>I am a full time student, attending LSU for my BA Art & Digital Art & Web Development. 
+      </div>
+
+
+        <div clas="where-am-from"> I'm from a town right outside Chicago, called Hammond, Indiana. In 2014, I moved to southern Louisiana and have been here ever since.
+        </p>
+      </div>
 
 <div class="disability-intro"><p>I am a Spinal Cord Injury Survivor.
 
-  In April 2019, I was in a bad car accident where I suffered many injuries including breaks in my neck and my spine, causing permanent paraplegia. I now use a wheelchair to get around, which is another separate challenge all on it’s own- Learning to adapt to a whole new way of doing things and living life again.
+  In April 2019, I was in a bad car accident where I broke my spine causing me to become paraplegic from the chest down. I now use a wheelchair to get around, which is another separate challenge all on it’s own- Learning to adapt to a whole new way of doing things and living life again.
   
-  I view this as one of my strengths, because it has given me a whole new, and wider perspective on the meaning of life, the outlook on the way things are, and the challenges that others face that we don’t even think about.
+  I view this as one of my strengths, because it has given me a whole new and wider perspective on the meaning of life, the outlook on the way things are, and the challenges that others face that we don’t even think about.
   
   This is what makes me a strong advocate for ADA accessibility and inclusivity. As an artist, my perspective expands my horizon. As a person, with my advocacy, my art, and my work, I hope to inspire change.</p></div>
 
