--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bubblegum+Sans&family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Rubik+Wet+Paint&family=Satisfy&family=Tilt+Neon&display=swap" rel="stylesheet">
+
     
 
 </head>
