add outline shadow
add outline shadow to hey there on about me page

--- a/contact.html
+++ b/contact.html
@@ -42,22 +42,21 @@
     </ul>
     </nav>
 
-<h1>Contact</h1>
+<h1><strong>Contact</strong></h1>
 
 <div class="contact-project"><p>Want to start a new project?</p>
 </div>
 
 <div class="contact-say-hello"><p>Or just say Hello?</p></div>
 
-<div class="email-link"><a href="mailto:hsloat1@lsu.edu">Hsloat1@lsu.edu</a>
+<div class="email-link"><a href="mailto:hsloat1@lsu.edu">Send me an Email!</a>
 </div>
 
 <div class="pink-insta-icon">
   <img src="./img/pink-circle-insta-icon.png" alt="instagram-icon"> 
 </div>
 
-DollyHaloArt
-https://www.instagram.com/dollyhaloart/
+<div class="find-me-instagram">Find me on Instagram!</div>
 
 <a href="https://www.instagram.com/dollyhaloart/" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; text-decoration: none; color: white; background-color: #E1306C; padding: 10px 15px; border-radius: 5px;">
   <img src="./img/pink-circle-insta-icon.png" alt="Instagram Icon" style="width: 20px; height: 20px; margin-right: 10px;">
