--- a/aboutme.html
+++ b/aboutme.html
@@ -2,9 +2,8 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>about me page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="portfolio_site">
+    <title>contact page</title>
+    <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
     <meta property="og:type" content="">
@@ -18,7 +17,13 @@
     <meta name="theme-color" content="#fafafa">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet">
+  
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bubblegum+Sans&family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Rubik+Wet+Paint&family=Satisfy&family=Tilt+Neon&display=swap" rel="stylesheet">
+  </head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,12 +43,12 @@
 
   <div class="pre-bday-outer">
     <div class="pre-bday-inner">
-      <p class="top_title">.<div class="pre-bday-row">
+      <p class="top_title"><div class="pre-bday-row">
         <div>
           <img src="./img/smallcroppedprofilepic.jpg" alt="digital self portrait" width="500" height="550"> 
         </div>
         <div class="pre-bday-intro">
-          <h1 class="pre-bday-title"><strong>Dolly Halo</strong></h1>
+          <h1 class="pre-bday-title"><strong>About Me</strong></h1>
           <p class="h3 pre-bday-meta"><b>Hey There!</b></p>
           <p class="intro-para"><em>With a knack for seeing things from a different perspective, I love creating art using a variety of different mediums.</em></div>
       </div>
@@ -53,7 +58,7 @@
 
       <div class="pre-bday-row">
         <div>
-          <p>Experience <b>sculpting</b> with clay, wire, metal, cardboard, and tissue paper.</p>
+          <p><b>sculpting</b> with clay, wire, metal, cardboard, and tissue paper.</p>
           <p><b>Painting</b> with acrylics, gouache, indian ink, and spray paint</p>
 
         </div>
