--- a/mywork.html
+++ b/mywork.html
@@ -2,9 +2,8 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>portfolio_site-home page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="portfolio_site">
+    <title>contact page</title>
+    <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
     <meta property="og:type" content="">
@@ -18,7 +17,13 @@
     <meta name="theme-color" content="#fafafa">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet">
+  
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bubblegum+Sans&family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Rubik+Wet+Paint&family=Satisfy&family=Tilt+Neon&display=swap" rel="stylesheet">
+  </head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +41,7 @@
     </ul>
     </nav>
 
-<h1>My Work</h1>
+<h1><strong>My Work</strong></h1>
     
   <section class="portfolio-grid">
     <a href="./2d_artwork.html">
