fixed h1 on all pages

--- a/2d_artwork.html
+++ b/2d_artwork.html
@@ -37,13 +37,13 @@
     </nav>
 
 
+    <h1><strong>Artist Inspired Board Game</h1></strong>
+    
 
-    Salvador Dali Inspired Board Game
-
-This was a project where I was tasked with creating a board game with artwork inspired by a famous artist. The mediums that were used to create this work include gouache, Indian ink, Micron pens, the game pieces out of clay, done on bristol paper mounted on cardboard.
+    <div class="board-game-descript">This was a project where I was tasked with creating a board game with artwork inspired by a famous artist. The mediums that were used to create this work include gouache, Indian ink, Micron pens, the game pieces out of clay, done on bristol paper mounted on cardboard.
 
 The piece is carefully arranged, cut and glued so the board folds up nicely.
-
+</div>
 
 
   <div class="salvador-dali-pic1">
