--- a/3d_artwork.html
+++ b/3d_artwork.html
@@ -36,8 +36,8 @@
     </ul>
     </nav>
 
-
-    Wire Sculpture
+    <h1><strong>  Wire Sculpture</strong></h1>
+   
 
 One of my first challenges in 3D art was to create an object out of wire. I chose to create a wheelchair because it was very personal to me. The wheelchair represents mobility, independence, strength, and freedom. 
 
