--- a/aboutme.html
+++ b/aboutme.html
@@ -41,14 +41,17 @@
   </ul>
   </nav>
 
+  
+<h1>><strong>About Me</strong></h1>
+  
   <div class="pre-bday-outer">
     <div class="pre-bday-inner">
       <p class="top_title"><div class="pre-bday-row">
         <div>
-          <img src="./img/smallcroppedprofilepic.jpg" alt="digital self portrait" width="500" height="550"> 
+          <img src="./img/smallcroppedprofilepic.jpg" alt="digital self portrait"> 
         </div>
         <div class="pre-bday-intro">
-          <h1 class="pre-bday-title"><strong>About Me</strong></h1>
+        
           <p class="h3 pre-bday-meta"><b>Hey There!</b></p>
           <p class="intro-para"><em>With a knack for seeing things from a different perspective, I love creating art using a variety of different mediums.</em></div>
       </div>
