--- a/musicbook.html
+++ b/musicbook.html
@@ -36,7 +36,7 @@
     </ul>
     </nav>
 
-
+    <h1>><strong>The Sound of Form</strong></h1>
   <div class="music-book">
     <img src="./img/music-book (3).jpg" alt="digital portrait"> 
   </div>
