--- a/mywork.html
+++ b/mywork.html
@@ -80,7 +80,7 @@
         <img src="./img/Painted wire sculpture portfolio.jpg" alt="typog_thumbnail">
       </a>
 
-      <a href="./typog_artwork.html">
+      <a href="./musicbook.html">
         <img src="./img/music-book (5).jpg" alt="typog_thumbnail">
       </a>
 
@@ -95,7 +95,7 @@
       </a>
 
 
-      <a href="./img/merch-motto-pitch-web-jpeg.jpg">
+      <a href="./mottomerch.html">
         <img src="./img/MottoMerch-product-pitch (1).jpg" alt="abstract-scupture">
       </a>
 
