--- a/nature9times.html
+++ b/nature9times.html
@@ -34,8 +34,8 @@
     <li><a href="contact.html">Contact</a></li>
     </ul>
     </nav>
-
-    "Nature 9 Times"
+    <h1>><strong>Nature 9 Times</strong></h1>
+    
 
     Nature designed in 9 different ways,
     
