--- a/rottingfruit.html
+++ b/rottingfruit.html
@@ -35,14 +35,15 @@
     </ul>
     </nav>
 
-    Rotting Fruit
+    <h1><strong> Rotting Fruit</strong></h1>
+   
 
-    I cut and arranged a banana and then observed it over the course of several days, documenting the stages of decay. 
+    <div class="bananas"> I cut and arranged a banana and then observed it over the course of several days, documenting the stages of decay. 
     
     I painted the stages of rotting fruit by using gouache on bristol paper.
-
+  </div>
     
-  <div class="digital-portrait">
+  <div class="bananas-img">
     <img src="./img/bananas.jpg" alt="rotting-fruit-painting"> 
   </div>
 
