--- a/typog_artwork.html
+++ b/typog_artwork.html
@@ -36,13 +36,15 @@
     </nav>
 
 
-    Event Poster
+    <h1><strong>Event Poster</h1></strong>
 
-Displayed here is an event poster I created for a make-believe Horror Film Festival.
+<div class= poster-description>Displayed here is an event poster I created for a make-believe Horror Film Festival.
 
 Demonstrating how typography can be manipulated to create engaging advertisement and call to action.
+</div>
 
-        <img src="./img/event_poster_large (1).jpg" alt="typog_event_poster">
+<div class= poster-img><img src="./img/event_poster_large (1).jpg" alt="typog_event_poster">
+</div>
 
 </body>
 </html>
