--- a/digital_artwork.html
+++ b/digital_artwork.html
@@ -36,10 +36,13 @@
     </ul>
     </nav>
 
-    Digital Self Portrait 
+  <h1><strong>Digital Self Portrait </strong></h1>
+    
 
-    Digital self portrait referenced from an original photo, created using Adobe Illustrator.
-
+   
+    <div class="digital-portrait-descript">
+      Digital self portrait referenced from an original photo, created using Adobe Illustrator. 
+    </div>
     
   <div class="digital-portrait">
     <img src="./img/digital_portrait.jpg" alt="digital portrait"> 
