--- a/digitalartpattern.html
+++ b/digitalartpattern.html
@@ -36,8 +36,8 @@
     </ul>
     </nav>
 
-
-    Pattern
+    <h1>><strong>Pattern</strong></h1>
+    
 
 Experimenting creating pattern with adobe illustrator. 
 
