fixed typos in h1 tags

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>contact page</title>
+    <title>About me page</title>
     <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
@@ -42,7 +42,7 @@
   </nav>
 
   
-<h1>><strong>About Me</strong></h1>
+<h1><strong>About Me</strong></h1>
   
   <div class="pre-bday-outer">
     <div class="pre-bday-inner">
