--- a/abstractsculpture.html
+++ b/abstractsculpture.html
@@ -36,7 +36,10 @@
     </ul>
     </nav>
 
-    <h1>><strong>Abstract Cubist Sculpture</strong></h1>
+    <h1><strong>Abstract Cubist Sculpture</strong></h1>
+
+    <p>This project was a challenge to create a sculpture from a cubist painting.</p>
+    <p>The painting that inspired this piece is called "Time" by Patrick Akpojotor. 2019</p>
   
   <div class="abstract-scupture">
     <img src="./img/abstract-scupture2.jpg" alt="abstract-scupture"> 
