--- a/digitalartpattern.html
+++ b/digitalartpattern.html
@@ -36,7 +36,7 @@
     </ul>
     </nav>
 
-    <h1>><strong>Pattern</strong></h1>
+    <h1><strong>Pattern</strong></h1>
     
 
 Experimenting creating pattern with adobe illustrator. 
