--- a/equipxapp.html
+++ b/equipxapp.html
@@ -36,7 +36,7 @@
     </ul>
     </nav>
 
-    <h1>><strong>EquipX App Design</strong></h1>
+    <h1><strong>EquipX App Design</strong></h1>
   <div class="equipx">
     <img src="./img/HollySloat_EquipX Visual Comps-jpeg.jpg" alt="equipx components image"> 
   </div>
