--- a/musicbook.html
+++ b/musicbook.html
@@ -36,9 +36,16 @@
     </ul>
     </nav>
 
-    <h1>><strong>The Sound of Form</strong></h1>
-  <div class="music-book">
-    <img src="./img/music-book (3).jpg" alt="digital portrait"> 
+    <h1><strong>The Sound of Form</strong></h1>
+
+   <p>This was a project where I needed to listen to a song, and translate the sound into an art form. This book is a visual representation of the music you hear.
+  </p> 
+  <p>The book cover is created with compressed cardboard and wrapped with blue pleather material, whereas the pages are created with gouche and micron pens on bristol paper.
+  </p>
+  
+  
+    <div class="music-book">
+    <img src="./img/music-book (2).jpg" alt="music as a form of art"> 
   </div>
 
 
