--- a/nature9times.html
+++ b/nature9times.html
@@ -34,7 +34,7 @@
     <li><a href="contact.html">Contact</a></li>
     </ul>
     </nav>
-    <h1>><strong>Nature 9 Times</strong></h1>
+    <h1><strong>Nature 9 Times</strong></h1>
     
 
     Nature designed in 9 different ways,
