--- a/mottomerch.html
+++ b/mottomerch.html
@@ -36,7 +36,7 @@
     </ul>
     </nav>
 
-    <h1>><strong>Motto Merch</strong></h1>
+    <h1><strong>Motto Merch</strong></h1>
     
 
     Focusing on using only typography, I designed a motto meant for print. I chose the saying, "Life Rolls On" because it emphasizes the message I try to inspire.
