fixed layout of about me- center h1

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>About me page</title>
+    <title>contact page</title>
     <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
@@ -32,69 +32,39 @@
   <!-- Place your site's HTML here -->
   <!-- whole page -->
 
-<nav class="navbar">
-  <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="aboutme.html">About</a></li>
-  <li><a href="mywork.html">My Work</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  </ul>
-  </nav>
+  <body>
+    <nav class="navbar">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutme.html">About</a></li>
+        <li><a href="mywork.html">My Work</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-  
-<h1><strong>About Me</strong></h1>
-  
-  <div class="pre-bday-outer">
-    <div class="pre-bday-inner">
-      <p class="top_title"><div class="pre-bday-row">
-        <div>
-          <img src="./img/smallcroppedprofilepic.jpg" alt="digital self portrait"> 
-        </div>
-        <div class="pre-bday-intro">
-        
-          <p class="h3 pre-bday-meta"><b>Hey There!</b></p>
-          <p class="intro-para"><em>With a knack for seeing things from a different perspective, I love creating art using a variety of different mediums.</em></div>
+    <h1><strong class="main-gorilla-wrapper">About Me</strong></h1>
+<div class="main-gorilla-wrapper">
+    <div class="image-text-wrapper">
+      <div class="gorilla-image"><img src="./img/smallcroppedprofilepic.jpg" alt="Digital self-portrait">
       </div>
-
-      <div class="my-name-is"> <p> My name is Holly Sloat, but everyone calls me Dolly Halo.</p>
-    </div>
-
-      <div class="pre-bday-row">
-        <div>
-          <p><b>sculpting</b> with clay, wire, metal, cardboard, and tissue paper.</p>
-          <p><b>Painting</b> with acrylics, gouache, indian ink, and spray paint</p>
-
-        </div>
-        <div class="pre-bday-intro">
-          <p><b>Drawing</b> using pencil, colored pencil, micron pens, charcoal, and pastels.</p>
-          <p><b>Digital art</b> using Adobe Illustrator and Photoshop.</p>
-          <p><b>Miscellaneous</b> art including but not limited to, photography, collage, scrapbooking, sewing, and embroidery.  </p>
-        </div>
-
-
-
-
-       <div class="full-time-student"> <p>I am a full time student, attending LSU for my BA Art & Digital Art & Web Development. 
-      </div>
-
-
-        <div clas="where-am-from"> I'm from a town right outside Chicago, called Hammond, Indiana. In 2014, I moved to southern Louisiana and have been here ever since.
+      <div class="text-content">
+        <p class="h3 pre-bday-meta"><b>Hey There!</b></p>
+        <p class="intro-para">
+          <em>With a knack for seeing things from a different perspective, I love creating art using a variety of different mediums.</em>
         </p>
+      
       </div>
-
-<div class="disability-intro"><p>I am a Spinal Cord Injury Survivor.
-
-  In April 2019, I was in a bad car accident where I broke my spine causing me to become paraplegic from the chest down. I now use a wheelchair to get around, which is another separate challenge all on it’s own- Learning to adapt to a whole new way of doing things and living life again.
-  
-  I view this as one of my strengths, because it has given me a whole new and wider perspective on the meaning of life, the outlook on the way things are, and the challenges that others face that we don’t even think about.
-  
-  This is what makes me a strong advocate for ADA accessibility and inclusivity. As an artist, my perspective expands my horizon. As a person, with my advocacy, my art, and my work, I hope to inspire change.</p></div>
-
-
-
-
-
-
-
-</body>
+    </div>
+    <div class="gorilla-text"> <p>My name is Holly Sloat, but everyone calls me Dolly Halo.</p>
+      <p><b>sculpting</b> with clay, wire, metal, cardboard, and tissue paper.</p>
+      <p><b>Painting</b> with acrylics, gouache, Indian ink, and spray paint.</p>
+      <p><b>Drawing</b> using pencil, colored pencil, micron pens, charcoal, and pastels.</p>
+      <p><b>Digital art</b> using Adobe Illustrator and Photoshop.</p>
+      <p><b>Miscellaneous</b> art including but not limited to, photography, collage, scrapbooking, sewing, and embroidery.</p>
+      <p>I am a full-time student, attending LSU for my BA Art & Digital Art & Web Development.</p>
+      <p>I'm from a town right outside Chicago, called Hammond, Indiana. In 2014, I moved to southern Louisiana and have been here ever since.</p>
+      <p>I am a Spinal Cord Injury Survivor. In April 2019, I was in a bad car accident where I broke my spine causing me to become paraplegic from the chest down...</p>
+    </div>
+  </div>
+  </body>
 </html>
