--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
     <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutme.html">About</a></li>
+
     <li><a href="mywork.html">My Work</a></li>
     <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -52,9 +53,7 @@
 <div class="email-link"><a href="mailto:hsloat1@lsu.edu">Send me an Email!</a>
 </div>
 
-<div class="pink-insta-icon">
-  <img src="./img/pink-circle-insta-icon.png" alt="instagram-icon"> 
-</div>
+
 
 <div class="find-me-instagram">Find me on Instagram!</div>
 
@@ -63,7 +62,9 @@
   DollyHaloArt
 </a>
 
-
+<div class="pink-insta-icon">
+  <img src="./img/heart-logo-dh-official-png.png" alt="dolly-logo"> 
+</div>
 
 
 
