update about me text

--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
       
       </div>
     </div>
-    <div class="gorilla-text"> <p>My name is Holly Sloat, but everyone calls me Dolly Halo.</p>
+    <div class="gorilla-text"> <p>My name is Holly, but everyone calls me Dolly Halo.</p>
       <p><b>sculpting</b> with clay, wire, metal, cardboard, and tissue paper.</p>
       <p><b>Painting</b> with acrylics, gouache, Indian ink, and spray paint.</p>
       <p><b>Drawing</b> using pencil, colored pencil, micron pens, charcoal, and pastels.</p>
